@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix for bug #2021042: level inscription indefinately with 1 scroll.
+ server/skills.c: don't allow to write when blind.
+Nicolas Weeger 2008-09-19
+
 Tentative fix for bug #2028467: confusing changing things it should not.
  server/spell_util.c: correctly count items.
 Nicolas Weeger 2008-09-19
